log
Mon 26 Sep 2022 01:08:50 AM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
4cfd3bc
Mon 26 Sep 2022 01:23:09 AM UTC: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|0
30f8509
Mon 26 Sep 2022 01:28:13 AM UTC: 
 treemap.c | 103 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 100 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:132:1: error: control reaches end of non-void function [-Werror=return-type]
  132 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
de59d2b
Mon 26 Sep 2022 01:37:07 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
6e5412d
